[metadata]
name = storyline
version = 0.1.0
url = https://github.com/progician/Storylines
license = GPLv3
maintainer = Gyula Gubacsi
maintainer_email = gyula.gubacsi@gmail.com
description = Git repository management tools via Web GUI.

[options]
packages = find:
include_package_data = true
install_requires =
    Flask

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = test

[coverage:run]
branch = True
source =
    storyline